syntax = "proto3";

package common;

message ErrorInterface {
    int32 status_code = 1;
    string message = 2;
}
