syntax = "proto3";

package market_data;

import "libs/proto/common.proto";

service MarketDataService {
    rpc GetGoldPrice (common.Empty) returns (GoldPriceResponse) {}
}

message GoldPriceResponse {
    GoldPriceDataProtoType data = 1;
    bool success = 2;
    common.ErrorInterface error = 3;
}

message GoldPriceDataProtoType {
    int64 timestamp = 1;
    string metal = 2;
    string currency = 3;
    string exchange = 4;
    string symbol = 5;
    double prev_close_price = 6;
    double open_price = 7;
    double low_price = 8;
    double high_price = 9;
    int64 open_time = 10;
    double price = 11;
    double ch = 12;
    double chp = 13;
    double ask = 14;
    double bid = 15;
    double price_gram_24k = 16;
    double price_gram_22k = 17;
    double price_gram_21k = 18;
    double price_gram_20k = 19;
    double price_gram_18k = 20;
    double price_gram_16k = 21;
    double price_gram_14k = 22;
    double price_gram_10k = 23;
}
